Update documentation swagger auth
